--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-math
-scipy
-pandas
-numpy
-matplotlib.pyplot
-pystan
-arviz 
+math>=3
+scipy==1.5.2
+pandas==1.1.3
+numpy==1.19.1
+matplotlib.pyplot==3.3.2
+pystan==2.19.0.0
+arviz==0.6.1
